--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -14,7 +14,7 @@
 				<label for="username">Email</label>
 				<input type="text" id="username" name="_username" value="{{ last_username }}"/>
 
-				<label for="password">Mot de passe</label><br>
+				<label for="password">Mot de passe</label>
 				<input
 				type="password" id="password" name="_password"/>
 
