--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -9,7 +9,7 @@
         {{ form_row(form.plainPassword) }}
         {{ form_row(form.avatar) }}
         {{ form_row(form.company) }}
-        {{ form_row(form.enregistrer) }}
+        {{ form_row(form.enregistrer, {'attr': {'class': 'user-form-enregistrer'}}) }}
     {{ form_end(form) }}
 </div>
 
