--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -14,7 +14,7 @@
         {{ form_row(registrationForm.plainPassword) }}
         {{ form_row(registrationForm.avatar) }}
         {{ form_row(registrationForm.company) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+        {{ form_row(registrationForm.agreeTerms, {'attr': {'class': 'registration-form-agreeTerms'}}) }}
         {{ form_row(registrationForm.enregistrer) }}
     {{ form_end(registrationForm) }}
     </div>
