--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -283,38 +283,17 @@ body {
 // START FLEX OFFICE
 
 .flex-office {
-    background-color: $color-light-red;
+    background-color: $color-cerise;
+    
+    height: 35vh;
+    margin-bottom: 2rem;
+    padding: 1rem .5rem;
+}
+
+iframe {
     border-radius: 2em;
-    font-family: $fontworksans;
-    padding-top: .5rem;
-    text-align: center;
-}
-
-h4.flex-subtitle {
-    font-family: $fontworksans;
-    font-size: .7rem;
-    font-weight: 300;
-    letter-spacing: .3rem;
-    margin-bottom: 0;
-}
-
-h2.flex-title {
-    font-family: $fontbodini;
-    font-size: 2rem;
-    font-weight: 600;
-    margin-top: .5rem;
-}
-
-h4.p-title {
-    margin-top: .5rem;
-}
-
-p.p-flex {
-    color: $color-cerise;
-    font-size: .8rem;
-    font-weight: 500;
-    margin: 1rem;
-    padding-bottom: 2rem;
+    height: 100%;
+    width: 100%;
 }
 
 // END FLEX OFFICE
