--- a/templates/space/show.html.twig
+++ b/templates/space/show.html.twig
@@ -102,19 +102,14 @@
 		<button class="show-space-reservation-btn" id="reservation-btn" type="submit">Choisir une date de réservation</button>
 	</div>
 	<div class="show-reservation" id="show-reservation-modal">
-		{# <form class="show-reservation-modal-content">
+		<div class="show-reservation-modal-content">
 			<div class="show-reservation-text">
 				<label class="reservation-choose-date" for="date">Choisir une date de réservation :</label>
 				<span class='show-reservation-modal-close' onclick='closeModal()'>&times;</span>
-			</div> #}
+			</div>
 			{% include "slot/_form.html.twig" %}
-			{# <input type="date" id="date" name="date" value="2022-01-15">
-			<input class="show-reservation-submit" type="submit" value="Réserver"></input> #}
-{# 		</form>
- #}	</div>
-	<pre>
-		{{ dump() }}
-	</pre>
+		</div>
+	</div>
 	<script>
 		const modal = document.getElementById("show-reservation-modal");
 		const btn = document.getElementById("reservation-btn");
