--- a/templates/slot/_form.html.twig
+++ b/templates/slot/_form.html.twig
@@ -1,4 +1,4 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <input type="submit" class="show-reservation-submit" value="Réserver"></input>
 {{ form_end(form) }}
