--- a/templates/space/edit.html.twig
+++ b/templates/space/edit.html.twig
@@ -3,11 +3,13 @@
 {% block title %}Edit Space{% endblock %}
 
 {% block body %}
+    <div class="user-edit-h1">
+        <h1>Modifier votre annonce</h1>
+    </div>
 
-    <h1> Mettre à jour l'espace {{ space.name }} </h1>
+    {{ include('space/_form.html.twig') }}
 
-    {{ include('space/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
-
-    <a class ="space-form-submit" href="{{ path('space_index') }}">Retourner sur la liste des annonces</a>
-
+    <div class="space-form-submit-div">
+        <a class ="space-form-submit" href="{{ path("space_show", {id: space.id}) }}">Retourner sur l'annonce</a>
+    </div>
 {% endblock %}
