--- a/templates/space/search.html.twig
+++ b/templates/space/search.html.twig
@@ -6,7 +6,7 @@
 		<div class="title">
 			{% include "_logoTitle.html.twig" %}
 		</div>
-		<p>Que recherchez - vous ?</p>
+		<h1 class="create-new-space">Que recherchez - vous ?</h1>
 		<div class="searchbar-and-filter">
 			<div class="search-container">
 				<form action="{{ path('space_search') }}" method="get" class="form-search">
@@ -92,7 +92,8 @@
 							<div class="spacelocationcard-content-down">{{ space.location }}</div>
 							<div id="price">
 								<div class="spaceprice">
-									<span id="spanprice">{{ random(50, 250) }} €</span>
+									<span id="spanprice">{{ random(50, 250) }}
+										€</span>
 									<span id="spanpriceday">/jour</span>
 								</div>
 								<a class="form-submit" id="buttonCardShow" href="{{ path("space_show", {id: space.id}) }}">Voir l'annonce</a>
