--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,56 +1,58 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="user-index-h1">
-        <h1>Mes informations</h1>
-    </div>
-    {% for category, messages in app.flashes %}
-        {% for message in messages %}
-            <div class="alert alert-{{ category }}">
-                {{ message }}
-            </div>
-        {% endfor %}
-    {% endfor %}
-    {% if app.user %}
-        <div class="user-index-container">
-            {% if app.user.avatar %}
-                <img class="user-index-avatar" src="{{ asset('build/images/' ~ app.user.avatar) }}">
-            {% else %}
-                <img class="user-index-avatar" src="{{ asset('build/images/logoMarcheConclu.png') }}">
-            {% endif %}
-            <h2>
-                {{ app.user.firstname ~ " " ~ app.user.lastname }}
-            </h2>
-            <div>
-                <p>
-                    {{ "Email :" ~ " " ~ app.user.email }}
-                </p>
-                {% if app.user.company %}
-                    <p>
-                        {{ "Société :" ~ " " ~ app.user.company }}
-                    </p>
-                {% endif %}
-            </div>
-            <a class="user-index-submit" href="{{ path('user_edit', {'id': app.user.id}) }}">Modifier mon profil</a>
-            <a class="user-index-submit" href="{{ path('app_logout') }}">Deconnexion</a>
-        </div>
+	<div class="search">
+		<div class="title">
+			{% include "_logotitle.html.twig" %}
+		</div>
+		<h1 class="create-new-space">Mes informations</h1>
+	</div>
+	{% for category, messages in app.flashes %}
+		{% for message in messages %}
+			<div class="alert alert-{{ category }}">
+				{{ message }}
+			</div>
+		{% endfor %}
+	{% endfor %}
+	{% if app.user %}
+		<div class="user-index-container">
+			{% if app.user.avatar %}
+				<img class="user-index-avatar" src="{{ asset('build/images/' ~ app.user.avatar) }}">
+			{% else %}
+				<img class="user-index-avatar" src="{{ asset('build/images/logoMarcheConclu.png') }}">
+			{% endif %}
+			<h2>
+				{{ app.user.firstname ~ " " ~ app.user.lastname }}
+			</h2>
+			<div>
+				<p>
+					{{ "Email :" ~ " " ~ app.user.email }}
+				</p>
+				{% if app.user.company %}
+					<p>
+						{{ "Société :" ~ " " ~ app.user.company }}
+					</p>
+				{% endif %}
+			</div>
+			<a class="user-index-submit" href="{{ path('user_edit', {'id': app.user.id}) }}">Modifier mon profil</a>
+			<a class="user-index-submit" href="{{ path('app_logout') }}">Deconnexion</a>
+		</div>
 
-        <div class="user-index-location">
-            {%if app.user.spaces is not empty %}
-                <h3>Mes annonces :</h3>
-            {% endif %}
-            <ul class="user-index-location-ul">
-            {% for space in app.user.spaces %}
-                <li class="user-index-location-li">
-                    <p>{{ "Nom de l'annonce :" ~ " " ~ space.name }}</p>
-                    <div>
-                        <a class="user-index-submit" href="{{ path("space_show", {id: space.id}) }}">Voir l'annonce</a>
-                        <a class="user-index-submit" href="{{ path("space_edit", {id: space.id}) }}">Modifier l'annonce</a>
-                    </div>
-                </li>
-            {% endfor %}
-            </ul>
-        </div>
-    {% endif %}
+		<div class="user-index-location">
+			{%if app.user.spaces is not empty %}
+				<h3>Mes annonces :</h3>
+			{% endif %}
+			<ul class="user-index-location-ul">
+				{% for space in app.user.spaces %}
+					<li class="user-index-location-li">
+						<p>{{ "Nom de l'annonce :" ~ " " ~ space.name }}</p>
+						<div>
+							<a class="user-index-submit" href="{{ path("space_show", {id: space.id}) }}">Voir l'annonce</a>
+							<a class="user-index-submit" href="{{ path("space_edit", {id: space.id}) }}">Modifier l'annonce</a>
+						</div>
+					</li>
+				{% endfor %}
+			</ul>
+		</div>
+	{% endif %}
 {% endblock %}
-
