--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -157,26 +157,33 @@ a {
     font-size: 1.3rem;
     font-weight: 300;
     letter-spacing: .1rem;
-    padding: 1rem 0 2rem;
+    padding: 1.5rem 0;
     text-align: center;
+
+    p{
+        margin: 0;
+    }
 }
 
 .premium-title {
     color: $color-burgundy;
-    font-family: $fontworksans;
+    font-family: $fontbodini;
     font-size: 1.3rem;
     font-weight: 400;
-    margin-top: 3rem;
+    letter-spacing: 2px;
+    margin: 2.5rem auto 1.5rem auto;
     text-align: center;
 }
 
 // START HOME_INDEX
 
 .offer {
+    border: 2px solid $color-burgundy;
+    border-radius: 2rem;
     display: flex;
     flex-direction: column;
-    margin: 1rem 0;
-    padding: 0 1rem;
+    margin: 1.5rem 1rem;
+    padding: 1rem;
 }
 
 .show-offer {
@@ -523,14 +530,13 @@ a {
 
 .flex-office {
     background-color: $color-cerise;
-    height: 35vh;
-    margin-bottom: 2rem;
-    padding: 1rem .5rem;
+    padding: 1rem 1.5rem;
+    height: 45vh;
 }
 
 video {
     border-radius: 2em;
-    height: 100%;
+    height: 75%;
     width: 100%;
 }
 
@@ -539,6 +545,7 @@ video {
 // START TESTIMONY
 .testimony {
     text-align: center;
+    margin: 2rem auto;
 }
 
 .testimony-title {
@@ -599,29 +606,17 @@ video {
 
 .partner {
     background-color: $color-cerise;
-    font-family: $fontworksans;
-    margin-top: 3rem;
-    padding: 1rem 0;
-    text-align: center;
-}
-
-.partner-title {
     color: $color-white;
-    font-size: 1.5rem;
-    font-weight: 300;
-    letter-spacing: .2rem;
+    font-family: $fontworksans;
+    margin: 2.5 auto;
+    padding: 1rem 1.5rem;
+    text-align: justify;
 }
 
 .partner-logos {
     display: flex;
     justify-content: space-around;
-    margin: 0 .5rem;
-}
-
-.partner-text {
-    color: $color-white;
-    margin: 0 2rem;
-    padding: 1rem 0;
+    margin: 2rem 0 1.5rem 0;
 }
 
 // END PARTNER
