--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -177,12 +177,18 @@ a {
 // START HOME_INDEX
 
 .offer {
-    border: 2px solid $color-burgundy;
+    border: 2px solid $color-light-grey;
     border-radius: 2rem;
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
     display: flex;
     flex-direction: column;
     margin: 1.5rem 1rem;
     padding: 1rem;
+}
+
+.premium {
+    border: 2px solid $color-burgundy;
+    box-shadow: 0px 1px 20px -12px #bd1110;
 }
 
 .show-offer {
@@ -193,6 +199,7 @@ a {
 }
 
 .image-offer {
+    border: 1px solid gray;
     border-radius: 1rem;
     object-fit: cover;
 }
@@ -503,12 +510,13 @@ a {
 }
 
 #price {
-    border-top: .5px solid $color-white;
+    align-items: baseline;
+    border-top: 1px solid grey;
     display: flex;
     justify-content: space-between;
     margin: 1rem;
-    padding-left: 0;
-}
+    padding-left: 0;  
+}       
 
 #spanprice {
     font-size: 1rem;
