--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -35,8 +35,12 @@
 {# ANNONCES PREMIUM SECTION #}
 	<h2 class="premium-title">ANNONCES PREMIUM</h2>
 	{% for space in spaces %}
-		<figure class="offer">
-			<img class="image-offer" src="{{ vich_uploader_asset(space) }}" alt="Marché Conclu"/>
+		<figure class="offer premium">
+			{# {% if app.space.photos %}
+			<img class="image-offer" src="{{ vich_uploader_asset(space) }}" alt="Photo de l'espace"/>
+            {% else %} #}
+                <img class="image-offer" src="{{ asset('build/images/bureauprivee.jpg') }}">
+		    {# {% endif %} #}
 			<figcaption class="text-offer">
 				<div class="card-border card-content-up cardcontent">
 					<div class="spacecategory card-content-up">{{ space.category }}
