--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1141,12 +1141,47 @@ input[type=range]:focus::-ms-fill-upper {
     text-align: center;
 }
 
-.user-index-container {
+.show-user-main-datas {
     align-items: center;
     display: flex;
-    flex-direction: column;
-    height: 50vh;
-    justify-content: space-around;
+    margin: 1rem 2rem;
+    padding-bottom: 2rem;
+    border-bottom: 1px solid $color-black;
+}
+
+.show-user-fullname {
+    color: $fontbodini;
+    margin-left: 2rem;
+}
+
+.show-user-secondary-datas {
+    margin: 1rem 2rem;
+}
+
+.show-user-contacts,
+.show-user-job {
+    display: flex;
+    justify-content: space-between;
+}
+
+.show-user-modify {
+    border-bottom: 1px solid $color-black;
+    margin: 2rem 2rem 1rem;
+    padding-bottom: 2rem;
+    text-align: center;
+}
+
+.show-user-modify-btn {
+    background-color: $color-cerise-btn;
+    border-radius: 4px;
+    color: $color-white;
+    padding: 1rem 6rem;
+    text-decoration: none;
+}
+
+.show-user-modify-btn:hover,
+.user-index-submit:hover {
+    color: $color-black;
 }
 
 .user-index-avatar {
@@ -1155,14 +1190,18 @@ input[type=range]:focus::-ms-fill-upper {
     border-radius: 30px;
     box-shadow: 10px 10px 5px $color-light-red;
     height: 100px;
-    margin-top: 1rem;
     width: 100px;
+}
+
+.user-index-location {
+    border-bottom: 1px solid $color-black;
+    margin: 0 2rem
 }
 
 .user-index-location-li {
     display: flex;
     flex-direction: column;
-    margin-bottom: 1rem;
+    margin: 1rem;
 }
 
 .user-index-location-li p {
@@ -1177,12 +1216,17 @@ input[type=range]:focus::-ms-fill-upper {
 
 .user-index-location h3 {
     margin-left: 2rem;
-    margin-top: 2rem;
+    margin-top: 1rem;
+}
+
+.show-user-disconnect {
+    display: flex;
+    justify-content: end;
+    margin: 1rem;
 }
 
 .user-index-submit {
     background-color: $color-cerise-btn;
-    border: 0;
     border-radius: 4px;
     color: $color-white;
     cursor: pointer;
