--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -192,7 +192,7 @@ a {
 }
 
 .premium {
-    border: 2px solid $color-burgundy;
+    border: 2px solid $color-black;
     box-shadow: 0px 1px 20px -12px #bd1110;
 }
 
@@ -683,7 +683,7 @@ label{
 
 input[type=submit],
 .form-submit {
-    background-color: $color-burgundy;
+    background-color: $color-cerise-btn;
     border: 0;
     border-radius: 0 20px 20px 0;
     box-shadow: 0px 1px 3px $color-grey;
