--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -192,7 +192,7 @@ a {
 }
 
 .premium {
-    border: 2px solid $color-black;
+    border: 2px solid $color-cerise-btn;
     box-shadow: 0px 1px 20px -12px #bd1110;
 }
 
@@ -204,9 +204,10 @@ a {
 }
 
 .image-offer {
-    border: 1px solid gray;
+    border: 1px solid $color-black;
     border-radius: 1rem;
     object-fit: cover;
+    height: 25vh;
 }
 
 .show-image-offer {
@@ -542,17 +543,19 @@ a {
     margin-top: 1rem;
 }
 
+#buttonCardShow:hover {
+    color: black;
+}
+
 // START FLEX OFFICE
 
 .flex-office {
     background-color: $color-cerise;
-    padding: 1rem 1.5rem;
-    height: 45vh;
+    padding: .25rem 1.5rem 2rem;
 }
 
 video {
     border-radius: 2em;
-    height: 75%;
     width: 100%;
 }
 
@@ -685,7 +688,7 @@ input[type=submit],
 .form-submit {
     background-color: $color-cerise-btn;
     border: 0;
-    border-radius: 0 20px 20px 0;
+    border-radius: 4px;
     box-shadow: 0px 1px 3px $color-grey;
     color: $color-white;
     cursor: pointer;
@@ -846,7 +849,7 @@ input[type=submit],
     font-size: 1.3rem; 
     justify-content: center;
     letter-spacing: 2px;
-    margin: 2rem 1rem 1rem 1rem;
+    margin: 2rem;
     padding-bottom: 7px;  
 }
 
@@ -860,7 +863,7 @@ input[type=submit],
     justify-content: center;
     margin: auto;
     padding: 2rem;
-    width: 75%;
+    width: 85%;
 }
 
 .div-add-new-space {
@@ -1233,6 +1236,10 @@ input[type=range]:focus::-ms-fill-upper {
     cursor: pointer;
     padding: 12px 20px;
     text-decoration: none;
+}
+
+.user-index-submit:hover {
+    color: $color-black;
 }
 
 // END USER INDEX
