--- a/assets/styles/carousel.scss
+++ b/assets/styles/carousel.scss
@@ -66,7 +66,7 @@
 
 .text-center {
     align-items: center;
-    background-color: $color-cerise;
+    background-color: $color-cerise-btn;
     border-radius: 1.5rem;
     color: $color-white;
     display: flex;
