--- a/templates/space/_form.html.twig
+++ b/templates/space/_form.html.twig
@@ -7,8 +7,9 @@
         {{ form_row(form.capacity, {'attr': {'class': 'space-form-content'}}) }}
         {{ form_row(form.category, {'attr': {'class': 'space-form-content'}}) }}
         {{ form_row(form.surface, {'attr': {'class': 'space-form-content'}}) }}
+        {{ form_row(form.address, {'attr': {'class': 'space-form-content'}}) }}
         {{ form_row(form.location, {'attr': {'class': 'space-form-content'}}) }}
         {{ form_row(form.price, {'attr': {'class': 'space-form-content'}}) }}
         {{ form_row(form.photosFile, {'attr': {'class': 'space-form-content'}}) }}
-        {{ form_row(form.enregistrer, {'attr': {'class': 'user-form-enregistrer'}}) }}
+        {{ form_row(form.enregistrer, {'attr': {'class': 'user-index-submit'}}) }}
     {{ form_end(form) }}
