added redirection to google map website with the real location of the space

--- a/templates/space/show.html.twig
+++ b/templates/space/show.html.twig
@@ -31,7 +31,7 @@
 		<h1 class="show-space-name">{{ space.name|upper }}</h1>
 		<h3 class="show-space-location">6 Rue de Saint-Brice, 51100 Reims</h3>
 		<div class="show-space-btn-locate">
-			<a class="show-space-link-locate" href="https://www.google.fr/maps/place/" ~ {{ space.location }} target="_blank">Localiser</a>
+			<a class="show-space-link-locate" href="https://www.google.fr/maps/place/ {{ space.address }} {{ space.location }}" target="_blank">Localiser</a>
 		</div>
 	</div>
 	<div class="show-space-head-right">
