modified button poster

--- a/templates/space/show.html.twig
+++ b/templates/space/show.html.twig
@@ -44,7 +44,7 @@
 	</div>
 </div>
 <ul class="show-space-details-list">
-		<li>{{ space.category }}</li>
+		<li>{{ space.category|capitalize }}</li>
 		<li>{{ space.surface }}m²</li>
 		<li>{{ space.capacity }} postes</li>
 </ul>
