--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -862,7 +862,7 @@ input[type=submit],
     height: auto;
     justify-content: center;
     margin: auto;
-    padding: 2rem;
+    padding: 2rem 1rem 0;
     width: 85%;
 }
 
@@ -876,6 +876,11 @@ input[type=submit],
     border-radius: 1rem;
     color: $color-white;
     padding: 1rem 2rem;
+    text-align: center;
+}
+
+.new-space-submit {
+    margin-top: 1rem;
     text-align: center;
 }
 
