--- a/templates/space/_form.html.twig
+++ b/templates/space/_form.html.twig
@@ -11,5 +11,7 @@
         {{ form_row(form.location, {'attr': {'class': 'space-form-content'}}) }}
         {{ form_row(form.price, {'attr': {'class': 'space-form-content'}}) }}
         {{ form_row(form.photosFile, {'attr': {'class': 'space-form-content'}}) }}
-        {{ form_row(form.enregistrer, {'attr': {'class': 'user-index-submit'}}) }}
+        <div class="new-space-submit">
+            {{ form_row(form.enregistrer, {'attr': {'class': 'user-index-submit'}}) }}
+        <div>
     {{ form_end(form) }}
