--- a/templates/_searchbar.html.twig
+++ b/templates/_searchbar.html.twig
@@ -1,5 +1,5 @@
 <form action="{{ path('space_search') }}" method="get" class="form-search">
-	<input class="search-bar" type="text" id="autocomplete" placeholder="Ou souhaitez-vous travailler ?" name="location" value="{{ location ?? '' }}">
+	<input class="search-bar" type="text" id="autocomplete" placeholder="Où souhaitez-vous louer ?" name="location" value="{{ location ?? '' }}">
 	<button class="btn form-submit">
 		Chercher
 	</button>
