--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -61,7 +61,7 @@
 						<span id="spanpriceday">
 							/ jour</span>
 					</div>
-					<a class="form-submit" id="buttonCardShow" href="{{ path("space_show", {id: space.id}) }}">Voir l'annonce</a>
+					<a class="show-space-link" id="buttonCardShow" href="{{ path("space_show", {id: space.id}) }}">Voir l'annonce</a>
 				</div>
 			</figcaption>
 		</figure>
