added the build for the video

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -71,7 +71,7 @@
 <div class="flex-office">
 	<h2 class="create-new-space">LE FLEX OFFICE</h2>
 	<video controls>
-		<source src="{{ asset('build/flexoffice.webm') }}" type="video/webm">
+		<source src="{{ asset('build/images/flexoffice.webm') }}" type="video/webm">
 	</video>
 	{# <iframe src="https://www.youtube.com/embed/qxTaXktrZTM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> #}
 </div>
