center Mes Annonces Proposées

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1238,8 +1238,8 @@ input[type=range]:focus::-ms-fill-upper {
 }
 
 .user-index-location h3 {
-    margin-left: 2rem;
     margin-top: 1rem;
+    text-align: center;
 }
 
 .show-user-disconnect {
