deleted comments on home index

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -73,7 +73,6 @@
 	<video controls>
 		<source src="{{ asset('build/images/flexoffice.webm') }}" type="video/webm">
 	</video>
-	{# <iframe src="https://www.youtube.com/embed/qxTaXktrZTM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> #}
 </div>
 {# TESTIMONY SECTION #}
 <div class="testimony">
@@ -99,7 +98,7 @@
 		<img src="{{ asset('build/images/axa.png') }}" alt="axa-logo"/>
 	</div>
 	<div class="partner-text">
-		<p class="partner-info">Pour vous assurer une expériance toujours plus simple et sécurisé, nous avons travaillé avec nos partnaires a devolopper des outils pour vous accompagner avec toujours plus de flexibilité dans votre location ou gestion de vos espaces de travail.</p>
+		<p class="partner-info">Pour vous assurer une expérience toujours plus simple et sécurisé, nous avons travaillé avec nos partnaires a devolopper des outils pour vous accompagner avec toujours plus de flexibilité dans votre location ou gestion de vos espaces de travail.</p>
 	</div>
 
 </div></div>{% endblock %}
