added capitalize for space category

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -43,7 +43,7 @@
 		    {# {% endif %} #}
 			<figcaption class="text-offer">
 				<div class="card-border card-content-up cardcontent">
-					<div class="spacecategory card-content-up">{{ space.category }}
+					<div class="spacecategory card-content-up">{{ space.category|capitalize }}
 						<span class="point">·</span>
 					</div>
 					<div class="spacecapacity card-content-up">{{ space.capacity }}
