--- a/templates/space/search.html.twig
+++ b/templates/space/search.html.twig
@@ -78,7 +78,7 @@
 						{# {% endif %} #}
 						<figcaption class="text-offer">
 							<div class="card-border card-content-up cardcontent">
-								<div class="spacecategory card-content-up">{{ space.category }}
+								<div class="spacecategory card-content-up">{{ space.category|capitalize }}
 									<span class="point">·</span>
 								</div>
 								<div class="spacecapacity card-content-up">{{ space.capacity }} places
