slotType add form photos

--- a/templates/space/_form.html.twig
+++ b/templates/space/_form.html.twig
@@ -10,6 +10,7 @@
         {{ form_row(form.address, {'attr': {'class': 'space-form-content'}}) }}
         {{ form_row(form.location, {'attr': {'class': 'space-form-content'}}) }}
         {{ form_row(form.price, {'attr': {'class': 'space-form-content'}}) }}
+        {{ form_row(form.photos, {'attr': {'class': 'space-form-content'}}) }}
         {{ form_row(form.photosFile, {'attr': {'class': 'space-form-content'}}) }}
         <div class="new-space-submit">
             {{ form_row(form.enregistrer, {'attr': {'class': 'user-index-submit'}}) }}
