--- a/templates/space/new.html.twig
+++ b/templates/space/new.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 	<div class="new-space-body">
 		<div class="title">
-			{% include "_logotitle.html.twig" %}
+			{% include "_logoTitle.html.twig" %}
 		</div>
 		<h1 class="create-new-space">Déposer une annonce</h1>
 		<div class="new-space-form">
