--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1184,7 +1184,7 @@ input[type=range]:focus::-ms-fill-upper {
 
 .show-user-modify {
     border-bottom: 1px solid $color-black;
-    margin: 2rem 2rem 1rem;
+    margin: 0 2rem;
     padding-bottom: 2rem;
     text-align: center;
 }
@@ -1193,8 +1193,13 @@ input[type=range]:focus::-ms-fill-upper {
     background-color: $color-cerise-btn;
     border-radius: 4px;
     color: $color-white;
-    padding: 1rem 6rem;
+    padding: 1rem 4rem;
     text-decoration: none;
+}
+
+.show-user-annonce-btns {
+    display: flex;
+    justify-content: space-between;
 }
 
 .show-user-modify-btn:hover,
@@ -1219,7 +1224,7 @@ input[type=range]:focus::-ms-fill-upper {
 .user-index-location-li {
     display: flex;
     flex-direction: column;
-    margin: 1rem;
+    margin: 1rem 0;
 }
 
 .user-index-location-li p {
@@ -1233,8 +1238,8 @@ input[type=range]:focus::-ms-fill-upper {
 }
 
 .user-index-location h3 {
-    margin-left: 2rem;
     margin-top: 1rem;
+    text-align: center;
 }
 
 .show-user-disconnect {
@@ -1248,7 +1253,8 @@ input[type=range]:focus::-ms-fill-upper {
     border-radius: 4px;
     color: $color-white;
     cursor: pointer;
-    padding: 12px 20px;
+    padding: .8rem;
+    text-align: center;
     text-decoration: none;
 }
 
