--- a/templates/space/_form.html.twig
+++ b/templates/space/_form.html.twig
@@ -10,9 +10,9 @@
         {{ form_row(form.address, {'attr': {'class': 'space-form-content'}}) }}
         {{ form_row(form.location, {'attr': {'class': 'space-form-content'}}) }}
         {{ form_row(form.price, {'attr': {'class': 'space-form-content'}}) }}
-        {{ form_row(form.photos, {'attr': {'class': 'space-form-content'}}) }}
-        {{ form_row(form.photosFile, {'attr': {'class': 'space-form-content'}}) }}
+        {{ form_row(form.photoFile, {'attr': {'class': 'space-form-content'}}) }}
         <div class="new-space-submit">
             {{ form_row(form.enregistrer, {'attr': {'class': 'user-index-submit'}}) }}
         <div>
     {{ form_end(form) }}
+</div>
