--- a/templates/space/show.html.twig
+++ b/templates/space/show.html.twig
@@ -6,8 +6,7 @@
 {% block body %}
 <div class="carousel">
             <div class="carousel-item-mc carousel-item-visible">
-                <img src="{{ asset('build/images/coworking.jpg') }}"
-                    alt="bureau privee" />
+                <img src="{{ asset('uploads/' ~ space.photo ) }}" alt="bureau privee" />
             </div>
             <div class="carousel-item-mc">
                 <img src="{{ asset('build/images/salledereunion.jpg') }}"
